# clearproof

./: .env.example  .gitignore  .npmrc  CIRCUIT_SIGNALS.md  CIRCUIT_TRUSTED_SETUP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  REPORT_TRISA_GAP.md  ROADMAP.md  SECURITY.md  package.json  pyproject.toml  turbo.json
.github/workflows/: ci.yml  release.yml  sanctions-update.yml
apps/docs/: mdx-components.tsx  next.config.mjs  package.json  tsconfig.json
apps/docs/app/: _meta.ts  layout.tsx  page.mdx
circuits/: amount_tier.circom  compliance.circom  credential_validity.circom  sanctions_nonmembership.circom
circuits/lib/: merkle_tree.circom
docs/internal/: CIRCUIT_SIGNALS.md
docs/superpowers/specs/: 2026-04-04-content-package-design.md
protos/: trisa_api.proto
scripts/: build_sanctions_tree.py  compile_circuits.sh  poseidon_hash.js
specs/: community-strategy.md  specs.md  well-known-clearproof.md
src/api/: __init__.py  main.py
src/api/middleware/: __init__.py  auth.py  rate_limit.py
src/api/routes/: __init__.py  auth.py  credential.py  health.py  proof.py
src/auth/: __init__.py  siwe_auth.py
src/chain/: __init__.py  audit_mirror.py  reader.py  writer.py
src/chain/abis/: ComplianceRegistry.json  (+2 more)
src/protocol/: __init__.py  compliance_proof.py  hybrid_payload.py  ivms101.py
src/prover/: __init__.py  snarkjs_prover.py  tier_mapping.py  verifier.py
src/registry/: __init__.py  credential_registry.py  issuer_registry.py  sanctions_list.py
src/sar/: __init__.py  audit_log.py  encryption.py  sar_review.py
tests/: conftest.py
tests/compliance/: test_real_sanctions.py  test_revocation.py  test_sanctions_match.py  test_threshold_tiers.py
tests/integration/: test_api_endpoints.py  test_grpc_trisa_bridge.py  test_hybrid_payload.py  test_trisa_bridge.py  test_trp_bridge.py
tests/unit/: test_circuits.py  test_deterministic_tree.py  test_hash_binding.py  test_ivms101.py  test_sar_review.py
(+27 files in other folders)
