[project]
name = "clearproof"
version = "0.2.0"
description = "ZK Travel Rule Compliance Bridge — replace raw PII with zero-knowledge proofs for FATF Travel Rule compliance"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "cryptography>=42.0",
    "grpcio>=1.62",
    "python-jose[cryptography]>=3.3",
    "web3>=7.0",
    "siwe>=4.0",
]

[project.optional-dependencies]
zk = [
    "ezkl>=15.0",
    "torch>=2.2",
    "onnx>=1.16",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "httpx>=0.27",
    "grpcio>=1.62",
]
all = ["clearproof[zk,dev]"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
